--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,7 +58,7 @@
                   </div>
                 </div>
                       
-              <a href="#sec2">
+              <a href="#sec2" id="move">
                 <svg width="40" height="60" viewBox="0 0 40 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M18.75 16.6667C18.75 17.357 19.3096 17.9167 20 17.9167C20.6904 17.9167 21.25 17.357 21.25 16.6667V11.6667C21.25 10.9763 20.6904 10.4167 20 10.4167C19.3096 10.4167 18.75 10.9763 18.75 11.6667V16.6667Z" fill="#A9A9A9"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M31.25 15.1239C31.25 9.58807 27.2227 4.87495 21.7546 4.01157C20.5921 3.82801 19.4079 3.82801 18.2454 4.01157C12.7773 4.87495 8.75 9.58807 8.75 15.1239V24.8761C8.75 30.412 12.7773 35.1251 18.2454 35.9885C19.4079 36.172 20.5921 36.172 21.7546 35.9885C27.2227 35.1251 31.25 30.412 31.25 24.8761L31.25 15.1239ZM21.3647 6.48098C25.6176 7.15249 28.75 10.8183 28.75 15.1239L28.75 24.8761C28.75 29.1818 25.6176 32.8475 21.3647 33.5191C20.4605 33.6618 19.5395 33.6618 18.6353 33.5191C14.3824 32.8475 11.25 29.1818 11.25 24.8761L11.25 15.1239C11.25 10.8183 14.3824 7.15249 18.6353 6.48098C19.5395 6.33821 20.4605 6.33821 21.3647 6.48098Z" fill="#A9A9A9"/>
