--- a/index.html
+++ b/index.html
@@ -1,96 +1,107 @@
-<!DOCTYPE html>
-<html lang="en" style="scroll-behavior:smooth;">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Shehab</title>
-</head>
-<body style="background-color: rgb(10, 10, 10);">
-    <div class="main">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="#home" style="font-size:30px;">Shehab<span id="dot">.</span></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#Newsletter">Newsletter <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#Services">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#Courses">Courses</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#Coaching">Coaching</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#Resources">Resources</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#About">About</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-          <div id="headContainer">
-            <div class="container head">  
-              <div class="text-box1">
-                <p class="h1 text-center" style="font-size: 75px;font-weight:400;color: #5f5f5f;">Designing with <span id="headText">Purpose,<br/></span>Building with <span id="headText">Webflow.</span></p>
+  <!DOCTYPE html>
+  <html lang="en" style="scroll-behavior:smooth;">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+      <title>Shehab</title>
+  </head>
+  <body style="background-color: rgb(10, 10, 10);">
+      <div class="main">
+          <nav class="navbar navbar-expand-lg navbar-dark">
+              <div class="container">
+                  <a class="navbar-brand" href="#home" style="font-size:30px;">Shehab<span id="dot">.</span></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Newsletter">Newsletter <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Services">Services</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Courses">Courses</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Coaching">Coaching</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Resources">Resources</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#About">About</a>
+                  </li>
+                </ul>
               </div>
-              <div class="text-box2">
-                <div class="text-start mb-50">
-                  <p>This is demo content. It will be as a sub headline!<br/>
-                    The headline above - yes you read it right , congratulation</p>
+           </nav>
+            <div id="headContainer">
+              <div class="container head">  
+                <div class="text-box1">
+                  <p class="h1 text-center" style="font-size: 75px;font-weight:400;color: #5f5f5f;">Designing with <span id="headText">Purpose,<br/></span>Building with <span id="headText">Webflow.</span></p>
                 </div>
-                  <div id="inputField">
-                    <div class="input">
-                      <input type="email" placeholder="Your Email" id="email">
-                      <button id="submit" >Subscribe to my Newslette <i class="fa-solid fa-arrow-right"></i></button>
-                    </div>
-                    <p>Join a community of thrived minds and entrepreneurs</p>
+                <div class="text-box2">
+                  <div class="text-start mb-50">
+                    <p>This is demo content. It will be as a sub headline!<br/>
+                      The headline above - yes you read it right , congratulation</p>
                   </div>
-                </div>
-                      
-              <a href="#sec2" id="move">
-                <svg width="40" height="60" viewBox="0 0 40 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M18.75 16.6667C18.75 17.357 19.3096 17.9167 20 17.9167C20.6904 17.9167 21.25 17.357 21.25 16.6667V11.6667C21.25 10.9763 20.6904 10.4167 20 10.4167C19.3096 10.4167 18.75 10.9763 18.75 11.6667V16.6667Z" fill="#A9A9A9"/>
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M31.25 15.1239C31.25 9.58807 27.2227 4.87495 21.7546 4.01157C20.5921 3.82801 19.4079 3.82801 18.2454 4.01157C12.7773 4.87495 8.75 9.58807 8.75 15.1239V24.8761C8.75 30.412 12.7773 35.1251 18.2454 35.9885C19.4079 36.172 20.5921 36.172 21.7546 35.9885C27.2227 35.1251 31.25 30.412 31.25 24.8761L31.25 15.1239ZM21.3647 6.48098C25.6176 7.15249 28.75 10.8183 28.75 15.1239L28.75 24.8761C28.75 29.1818 25.6176 32.8475 21.3647 33.5191C20.4605 33.6618 19.5395 33.6618 18.6353 33.5191C14.3824 32.8475 11.25 29.1818 11.25 24.8761L11.25 15.1239C11.25 10.8183 14.3824 7.15249 18.6353 6.48098C19.5395 6.33821 20.4605 6.33821 21.3647 6.48098Z" fill="#A9A9A9"/>
-                  <path d="M21.0624 46.6567L24.9153 42.0106C25.3302 41.5103 26.003 41.5103 26.4179 42.0106C26.8328 42.511 26.8328 43.3222 26.4179 43.8226L20.7512 50.6559C20.3363 51.1563 19.6636 51.1563 19.2486 50.6559L13.582 43.8226C13.167 43.3222 13.167 42.511 13.582 42.0106C13.9969 41.5103 14.6696 41.5103 15.0846 42.0106L18.9374 46.6567L18.9374 30.1041C18.9374 29.3965 19.4131 28.8229 19.9999 28.8229C20.5867 28.8229 21.0624 29.3965 21.0624 30.1041L21.0624 46.6567Z" fill="#A9A9A9"/>
-                  </svg>
-              </a>
+                    <div id="inputField">
+                      <div class="input">
+                        <input type="email" placeholder="Your Email" id="email">
+                        <button id="submit" >Subscribe to my Newslette <i class="fa-solid fa-arrow-right"></i></button>
+                      </div>
+                      <p>Join a community of thrived minds and entrepreneurs</p>
+                    </div>
+                  </div>
+                  <a href="#sec2" id="move">
+                  <svg width="40" height="60" viewBox="0 0 40 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M18.75 16.6667C18.75 17.357 19.3096 17.9167 20 17.9167C20.6904 17.9167 21.25 17.357 21.25 16.6667V11.6667C21.25 10.9763 20.6904 10.4167 20 10.4167C19.3096 10.4167 18.75 10.9763 18.75 11.6667V16.6667Z" fill="#A9A9A9"/>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M31.25 15.1239C31.25 9.58807 27.2227 4.87495 21.7546 4.01157C20.5921 3.82801 19.4079 3.82801 18.2454 4.01157C12.7773 4.87495 8.75 9.58807 8.75 15.1239V24.8761C8.75 30.412 12.7773 35.1251 18.2454 35.9885C19.4079 36.172 20.5921 36.172 21.7546 35.9885C27.2227 35.1251 31.25 30.412 31.25 24.8761L31.25 15.1239ZM21.3647 6.48098C25.6176 7.15249 28.75 10.8183 28.75 15.1239L28.75 24.8761C28.75 29.1818 25.6176 32.8475 21.3647 33.5191C20.4605 33.6618 19.5395 33.6618 18.6353 33.5191C14.3824 32.8475 11.25 29.1818 11.25 24.8761L11.25 15.1239C11.25 10.8183 14.3824 7.15249 18.6353 6.48098C19.5395 6.33821 20.4605 6.33821 21.3647 6.48098Z" fill="#A9A9A9"/>
+                    <path d="M21.0624 46.6567L24.9153 42.0106C25.3302 41.5103 26.003 41.5103 26.4179 42.0106C26.8328 42.511 26.8328 43.3222 26.4179 43.8226L20.7512 50.6559C20.3363 51.1563 19.6636 51.1563 19.2486 50.6559L13.582 43.8226C13.167 43.3222 13.167 42.511 13.582 42.0106C13.9969 41.5103 14.6696 41.5103 15.0846 42.0106L18.9374 46.6567L18.9374 30.1041C18.9374 29.3965 19.4131 28.8229 19.9999 28.8229C20.5867 28.8229 21.0624 29.3965 21.0624 30.1041L21.0624 46.6567Z" fill="#A9A9A9"/>
+                    </svg>
+                </a>
+              </div>
             </div>
-          </div>
-          <div class="sec2">
-            <div class="container" id="sec2">
-              <div id="sec21">
-                <p>Hi, I am Rony! I'm a designer with 3 years of web development
-                  experience with the past 2 years spent honing my skills in
-                  WordPress, Shopify. And Webflow</p>
+            <div class="sec2">
+              <div class="container" id="sec2">
+                <div id="sec21">
+                  <p>Hi, I am Rony! I'm a designer with 3 years of web development
+                    experience with the past 2 years spent honing my skills in
+                    WordPress, Shopify. And Webflow</p>
+                </div>
+                <div id="sec22">
+                  <p>1 understand the importance of a Pixel-<br/>
+                    perfect Website, pride myself on<br/>
+                    producing high-quality websites, and I'm<br/>
+                    comfortable working solo or as part of a<br/>
+                    team.</p>
+                    <img src="./assest/Avatar! 1.png">
+                </div>
+                <button type="button" class="btn btn-outline-dark" style="border-radius:30px;height: 64px;width: 295px;">Read My Story <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
+              </div> 
+            </div>
+            <div id="separator" class="row">
+              <div class="col">
+                <img src="./assest/breakdance-logo 1.png" style="min-width: 70px;">
+               <p>Template Designer - 2022</p>
               </div>
-              <div id="sec22">
-                <p>1 understand the importance of a Pixel-<br/>
-                  perfect Website, pride myself on<br/>
-                  producing high-quality websites, and I'm<br/>
-                  comfortable working solo or as part of a<br/>
-                  team.</p>
-                  <img src="./assest/Avatar! 1.png">
+              <div class="col">
+                <img src="./assest/replo3_cehpbe 1.png" style="min-width: 70px;">
+                <p>Product Tester - 2022</p>
               </div>
-              <button type="button" class="btn btn-outline-dark" style="border-radius:30px;height: 64px;width: 295px;">Read My Story <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
-            </div> 
+              <div class="col">
+                <img src="./assest/Group 15.png" style="min-width: 70px;">
+                <p>Ui & Web Designer - 2023</p>
+              </div>
+            </div>
+          </div> 
+      </div>
 
-          </div>
-          
-        </div> 
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-</body>
-</html>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  </body>
+  </html>
