--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
+                  <li class="nav-item active">
                     <a class="nav-link" href="#Newsletter">Newsletter <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
@@ -86,15 +86,15 @@
             </div>
             <div id="separator" class="row">
               <div class="col">
-                <img src="./assest/breakdance-logo 1.png" style="min-width: 70px;">
+                <img src="./assest/breakdance-logo 1.png" style="min-width: 50px;">
                <p>Template Designer - 2022</p>
               </div>
               <div class="col">
-                <img src="./assest/replo3_cehpbe 1.png" style="min-width: 70px;">
+                <img src="./assest/replo3_cehpbe 1.png" style="min-width: 50px;">
                 <p>Product Tester - 2022</p>
               </div>
               <div class="col">
-                <img src="./assest/Group 15.png" style="min-width: 70px;">
+                <img src="./assest/Group 15.png" style="min-width: 50px;">
                 <p>Ui & Web Designer - 2023</p>
               </div>
             </div>
