--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
                 </div>
               </div>
             </div>
-            <div class="sec4 container">
-              <div id="textSec" class="text-start">
+            <div class="sec4 container" >
+              <div id="textSec" class="text-start" style="max-width:605px;">
                 <p class="title">What Do I Do And How?</p>
-                <p style="width: 60%;">1 love to craft functional solutions for
+                <p>1 love to craft functional solutions for
                   unique problems. These are some skills
                   I've picked up over my career.</p>
               </div>
               <div id="graphSec">
-               
+               <h1>hi</h1>
               </div>
             </div>     
             </div>
