--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <div style="width: 60%;">
                   <p>As a UI/UX designer, I specialize in creating beautiful, intuitive designs that make your website or application stand out.</p>
                  </div> 
-                  <button type="button" class="btn btn-outline-dark text-center" style="width: 252px;height: 46px;">Fill Out This Form</button>
+                  <button type="button" class="btn btn-outline-dark text-center" style="width: max-content;">Fill Out This Form</button>
                 </div>
                 <div class="col-md-6 col-lg-4" id="Services">
                   <img src="./assest/Group 483229.png" class="mb-4" style="border-radius: 10px;">
@@ -115,7 +115,7 @@
                   <div style="width: 60%;">
                     <p>As a UI/UX designer, I specialize in creating beautiful, intuitive designs that make your website or application stand out.</p>
                    </div> 
-                  <button type="button" class="btn btn-outline-dark text-center" style="width: 252px;height: 46px;">Fill Out This Form</button>
+                  <button type="button" class="btn btn-outline-dark text-center" style="width: max-content;">Fill Out This Form</button>
                 </div>
                 <div class="col-md-6 col-lg-4" id="Services">
                   <img src="./assest/Group 483229.png" class="mb-4" style="border-radius: 10px;">
@@ -123,7 +123,7 @@
                   <div style="width: 60%;">
                     <p>As a UI/UX designer, I specialize in creating beautiful, intuitive designs that make your website or application stand out.</p>
                    </div> 
-                  <button type="button" class="btn btn-outline-dark text-center" style="width: 252px;height: 46px;">Fill Out This Form</button>
+                  <button type="button" class="btn btn-outline-dark text-center" style="width: max-content;">Fill Out This Form</button>
                 </div>
              
                 <div class="col-md-6 col-lg-4" id="Services">
@@ -132,7 +132,7 @@
                   <div style="width: 60%;">
                     <p>As a UI/UX designer, I specialize in creating beautiful, intuitive designs that make your website or application stand out.</p>
                    </div> 
-                  <button type="button" class="btn btn-outline-dark text-center" style="width: 252px;height: 46px;">Fill Out This Form</button>
+                  <button type="button" class="btn btn-outline-dark text-center" style="width: max-content;">Join 1000+ Suscribers</button>
                 </div>
                 <div class="col-md-6 col-lg-4" id="Services">
                   <img src="./assest/Group 483229.png" class="mb-4" style="border-radius: 10px;">
@@ -140,7 +140,7 @@
                   <div style="width: 60%;">
                     <p>As a UI/UX designer, I specialize in creating beautiful, intuitive designs that make your website or application stand out.</p>
                    </div> 
-                  <button type="button" class="btn btn-outline-dark text-center" style="width: 252px;height: 46px;">Fill Out This Form</button>
+                  <button type="button" class="btn btn-outline-dark text-center" style="width: max-content;">View My Courses</button>
                 </div>
                 <div class="col-md-6 col-lg-4" id="Services">
                   <img src="./assest/Group 483229.png" class="mb-4" style="border-radius: 10px;">
@@ -148,19 +148,22 @@
                   <div style="width: 60%;">
                     <p>As a UI/UX designer, I specialize in creating beautiful, intuitive designs that make your website or application stand out.</p>
                    </div> 
-                  <button type="button" class="btn btn-outline-dark text-center" style="width: 252px;height: 46px;">Fill Out This Form</button>
+                  <button type="button" class="btn btn-outline-dark text-center" style="width: max-content;">Reserve a Spot</button>
                 </div>
               </div>
             </div>
-            <div class="sec4 container" >
-              <div id="textSec" class="text-start" style="max-width:605px;">
+            <div class="sec4 container-md">
+              <div id="textSec" class="container">
                 <p class="title">What Do I Do And How?</p>
-                <p>1 love to craft functional solutions for
+                <p style="max-width: 605px;">1 love to craft functional solutions for
                   unique problems. These are some skills
                   I've picked up over my career.</p>
               </div>
               <div id="graphSec">
-               <h1>hi</h1>
+                <div class="text-center" style="width: 25%;">
+                  <p>Define goal, wireframe, design concept, content write. </p>
+                  <p>Planning</p>
+                </div>
               </div>
             </div>     
             </div>
