--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
               </div> 
             </div>
             <div id="separator" class="row">
-              <div class="col">
+              <div class="col-lg-4 col-md-6">
                 <img src="./assest/breakdance-logo 1.png" style="min-width: 50px;">
                <p>Template Designer - 2022</p>
               </div>
-              <div class="col">
+              <div class="col-lg-4 col-md-6">
                 <img src="./assest/replo3_cehpbe 1.png" style="min-width: 50px;">
                 <p>Product Tester - 2022</p>
               </div>
-              <div class="col">
+              <div class="col-lg-4 col-md-6">
                 <img src="./assest/Group 15.png" style="min-width: 50px;">
                 <p>Ui & Web Designer - 2023</p>
               </div>
