--- a/index.html
+++ b/index.html
@@ -171,9 +171,11 @@
                 <p>what my clients say?</p>
                 <p>Testimonial</p>
               </div>
-              <div id="sec52">
-                <video src="#" controls></video>
-                <div>
+              <div id="sec52" class="row mt-30">
+                <div  class="col-lg-6">
+                  <video src="#" controls style="width:100%;min-height:250px;"></video>
+                </div>
+                <div class="col-lg-6 col-md-4">
                   <p>I love to craft functional solutions for unique problems. These are some skills I've picked up over my career.</p>
                   <ul>
                     <li >Najmul Hasan</li>
