--- a/index.html
+++ b/index.html
@@ -177,10 +177,12 @@
                 </div>
                 <div class="col-lg-6 col-md-4">
                   <p>I love to craft functional solutions for unique problems. These are some skills I've picked up over my career.</p>
+                  <div style="margin-top: 50px;">
                   <ul>
                     <li >Najmul Hasan</li>
                   </ul>
-                  <p>CEO</p>
+                  <p class="ml-3">CEO</p>
+                  </div>
                 </div>
               </div>
             </div>    
