create moving arrows

--- a/index.html
+++ b/index.html
@@ -177,13 +177,17 @@
                 </div>
                 <div class="col-lg-6 col-md-4">
                   <p>I love to craft functional solutions for unique problems. These are some skills I've picked up over my career.</p>
-                  <div style="margin-top: 50px;">
+                  <div style="margin-top:50px;">
                   <ul>
                     <li >Najmul Hasan</li>
                   </ul>
                   <p class="ml-3">CEO</p>
                   </div>
                 </div>
+              </div>
+              <div id="arrows">
+                <i class="fa-sharp fa-solid fa-arrow-left"></i>
+                <i class="fa-sharp fa-solid fa-arrow-right"></i>
               </div>
             </div>    
             </div>
