--- a/index.html
+++ b/index.html
@@ -186,8 +186,36 @@
                 </div>
               </div>
               <div id="arrows">
-                <i class="fa-sharp fa-solid fa-arrow-left"></i>
-                <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                <i class="fa-sharp fa-solid fa-arrow-left" style="color: #a9a9a9;"></i>
+                <i class="fa-sharp fa-solid fa-arrow-right" style="color: #a9a9a9;"></i>
+              </div>
+              <div class="sec53 row">
+                <div class="col-lg-6 col-md-4">
+                  <p>A proven Track Record Of Growth</p>
+                  <p>This is a demo content for the header above it will be two lines sentences and it’s going to rock </p>
+                  <button type="button" class="btn btn-outline-dark text-center" style="width: max-content;">Work With Me <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
+                </div>
+                <div class="col-lg-6 col-md-4 row">
+                  <div class="col">
+                    <p>15+</p>
+                    <p>years in industry</p>
+                  </div>
+                  <div class="col">
+                    <p>$10M+</p>
+                    <p>In Adverting Spent</p>
+                  </div>
+                  <div class="w-100"></div>
+                  <div class="col">
+                    <p>$50M+</p>
+                    <p>Revenue Generated</p>
+                  </div>
+                  <div class="col">
+                    <p>20+</p>
+                    <p>Ecommerce Brands</p>
+                  </div>
+
+                </div>
+
               </div>
             </div>    
             </div>
