styling of first partition in sec53

--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
                 <i class="fa-sharp fa-solid fa-arrow-left" style="color: #a9a9a9;"></i>
                 <i class="fa-sharp fa-solid fa-arrow-right" style="color: #a9a9a9;"></i>
               </div>
-              <div class="sec53 row">
-                <div class="col-lg-6 col-md-4">
+              <div class="row" id="sec53">
+                <div class="col-lg-6 col-md-4" id="sec531">
                   <p>A proven Track Record Of Growth</p>
-                  <p>This is a demo content for the header above it will be two lines sentences and it’s going to rock </p>
-                  <button type="button" class="btn btn-outline-dark text-center" style="width: max-content;">Work With Me <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
+                  <p>This is a demo content for the header above it will be two lines sentences and it’s going <span>to rock</span></p>
+                  <button type="button" class="btn btn-outline-dark text-center">Work With Me <i class="fa-solid fa-arrow-up-right-from-square ml-5"></i></button>
                 </div>
-                <div class="col-lg-6 col-md-4 row">
+                <div class="col-lg-6 col-md-4 row" id="sec532">
                   <div class="col">
                     <p>15+</p>
                     <p>years in industry</p>
