--- a/index.html
+++ b/index.html
@@ -197,27 +197,30 @@
                 </div>
                 <div class="col-lg-6 col-md-4 row" id="sec532">
                   <div class="col">
-                    <p>15+</p>
-                    <p>years in industry</p>
+                    <p style="margin: 0;padding: 0;">15+</p>
+                    <p style="margin: 0;padding: 0;">years in industry</p>
                   </div>
                   <div class="col">
-                    <p>$10M+</p>
-                    <p>In Adverting Spent</p>
+                    <p style="margin: 0;padding: 0;">$10M+</p>
+                    <p style="margin: 0;padding: 0;"> In Adverting Spent</p>
                   </div>
                   <div class="w-100"></div>
                   <div class="col">
-                    <p>$50M+</p>
-                    <p>Revenue Generated</p>
+                    <p style="margin: 0;padding: 0;">$50M+</p>
+                    <p style="margin: 0;padding: 0;">Revenue Generated</p>
                   </div>
                   <div class="col">
-                    <p>20+</p>
-                    <p>Ecommerce Brands</p>
+                    <p style="margin: 0;padding: 0;">20+</p>
+                    <p style="margin: 0;padding: 0;">Ecommerce Brands</p>
                   </div>
 
                 </div>
 
               </div>
             </div>    
+            <div id="sec6">
+              <h1>hi</h1>
+            </div>
             </div>
           </div> 
       </div>
