--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
               </div>
               <div id="sec52" class="row mt-30">
                 <div  class="col-lg-6">
-                  <video src="#" controls style="width:100%;min-height:250px;"></video>
+                  <diV style="width: 80%;">
+                    <video src="#" controls style="width:100%;min-height:250px;"></video>
+                  </diV>
                 </div>
                 <div class="col-lg-6 col-md-4">
                   <p>I love to craft functional solutions for unique problems. These are some skills I've picked up over my career.</p>
