--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <div id="sec52" class="row mt-30">
                 <div  class="col-lg-6">
                   <diV style="width: 80%;">
-                    <video src="#" controls style="width:100%;min-height:250px;"></video>
+                    <video src="./assest/The Inspiring Background _ Music for Video _ 30 Sec.mp4" controls style="width:100%;min-height:250px;"></video>
                   </diV>
                 </div>
                 <div class="col-lg-6 col-md-4">
