--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               </div>
               <div id="sec52" class="row mt-30">
                 <div  class="col-lg-6">
-                  <diV style="width: 80%;">
+                  <diV style="width: 78%;">
                     <video src="./assest/The Inspiring Background _ Music for Video _ 30 Sec.mp4" controls style="width:100%;min-height:250px;"></video>
                   </diV>
                 </div>
@@ -198,20 +198,20 @@
                   <button type="button" class="btn btn-outline-dark text-center">Work With Me <i class="fa-solid fa-arrow-up-right-from-square ml-5"></i></button>
                 </div>
                 <div class="col-lg-6 col-md-4 row" id="sec532">
-                  <div class="col">
+                  <div class="col-3-sm">
                     <p style="margin: 0;padding: 0;">15+</p>
                     <p style="margin: 0;padding: 0;">years in industry</p>
                   </div>
-                  <div class="col">
+                  <div class="col-3-sm">
                     <p style="margin: 0;padding: 0;">$10M+</p>
                     <p style="margin: 0;padding: 0;"> In Adverting Spent</p>
                   </div>
                   <div class="w-100"></div>
-                  <div class="col">
+                  <div class="col-3-sm">
                     <p style="margin: 0;padding: 0;">$50M+</p>
                     <p style="margin: 0;padding: 0;">Revenue Generated</p>
                   </div>
-                  <div class="col">
+                  <div class="col-3-sm">
                     <p style="margin: 0;padding: 0;">20+</p>
                     <p style="margin: 0;padding: 0;">Ecommerce Brands</p>
                   </div>
