start building sec6

--- a/index.html
+++ b/index.html
@@ -220,8 +220,28 @@
 
               </div>
             </div>    
-            <div id="sec6">
-              <h1>hi</h1>
+            <div id="sec6  container-md">
+              <div id="sec61" class="container-md">
+                <p>Resources and Case Studies</p>
+                <p>1 craft digital solutions that showcase my
+                  passion and expertise in design and
+                  development.</p>
+              </div>
+              <div>
+                <div>
+                  <p>NEW</p>
+                  <p>This is a title of the resource or case study</p>
+                  <img src="./assest/Group 483213.png">
+                  <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
+                </div>
+                <div>
+                  <p>NEW</p>
+                  <p>This is a title of the resource or case study</p>
+                  <img src="./assest/Group 483213.png">
+                  <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
+                </div>
+                <button type="button" class="btn btn-outline-dark text-center">Browse All Resources </button>
+              </div>
             </div>
             </div>
           </div> 
