--- a/index.html
+++ b/index.html
@@ -220,28 +220,28 @@
 
               </div>
             </div>    
-            <div id="sec6  container-md">
-              <div id="sec61" class="container-md">
+            <div id="sec6">
+              <div id="sec61" class="container">
                 <p>Resources and Case Studies</p>
                 <p>1 craft digital solutions that showcase my
                   passion and expertise in design and
                   development.</p>
               </div>
-              <div>
+              <div id="sec62" class="container">
                 <div>
                   <p>NEW</p>
                   <p>This is a title of the resource or case study</p>
-                  <img src="./assest/Group 483213.png">
+                  <img src="./assest/Group 483213.png" style="width: 600px;">
                   <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
                 <div>
                   <p>NEW</p>
                   <p>This is a title of the resource or case study</p>
-                  <img src="./assest/Group 483213.png">
+                  <img src="./assest/Group 483213.png" style="width: 600px;">
                   <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
-                <button type="button" class="btn btn-outline-dark text-center">Browse All Resources </button>
               </div>
+              <button type="button" class="btn btn-outline-dark text-center">Browse All Resources </button>
             </div>
             </div>
           </div> 
