--- a/index.html
+++ b/index.html
@@ -227,18 +227,18 @@
                   passion and expertise in design and
                   development.</p>
               </div>
-              <div id="sec62" class="container">
+              <div id="sec62" class="row">
                 <div>
                   <p>NEW</p>
                   <p>This is a title of the resource or case study</p>
-                  <img src="./assest/Group 483213.png" style="width: 600px;">
-                  <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
+                  <img src="./assest/Group 483213.png" style="max-width: 540px;">
+                  <p style="width: 500px;">This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
                 <div>
                   <p>NEW</p>
                   <p>This is a title of the resource or case study</p>
-                  <img src="./assest/Group 483213.png" style="width: 600px;">
-                  <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
+                  <img src="./assest/Group 483213.png"  style="max-width: 540px;">
+                  <p style="width: 500px;">This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
               </div>
               <button type="button" class="btn btn-outline-dark text-center">Browse All Resources </button>
