--- a/index.html
+++ b/index.html
@@ -229,19 +229,19 @@
               </div>
               <div id="sec62" class="row">
                 <div>
-                  <p>NEW</p>
+                  <p id="new">NEW</p>
                   <p>This is a title of the resource or case study</p>
                   <img src="./assest/Group 483213.png" style="max-width: 540px;">
                   <p style="width: 500px;">This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
                 <div>
-                  <p>NEW</p>
+                  <p id="new">NEW</p>
                   <p>This is a title of the resource or case study</p>
                   <img src="./assest/Group 483213.png"  style="max-width: 540px;">
                   <p style="width: 500px;">This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
               </div>
-              <button type="button" class="btn btn-outline-dark text-center">Browse All Resources </button>
+              <button type="button" class="btn btn-outline-dark bg-dark text-center" style="font-style: italic;color: #ffff;">Browse All Resources </button>
             </div>
             </div>
           </div> 
