--- a/index.html
+++ b/index.html
@@ -228,17 +228,17 @@
                   development.</p>
               </div>
               <div id="sec62" class="row">
-                <div>
+                <div class="d-flex flex-column col">
                   <p id="new">NEW</p>
                   <p>This is a title of the resource or case study</p>
-                  <img src="./assest/Group 483213.png" style="max-width: 540px;">
-                  <p style="width: 500px;">This is a Short Description of the case study or the resouce expalining the output of this resources </p>
+                  <img src="./assest/Group 483213.png" >
+                  <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
-                <div>
+                <div class="d-flex flex-column col">
                   <p id="new">NEW</p>
                   <p>This is a title of the resource or case study</p>
-                  <img src="./assest/Group 483213.png"  style="max-width: 540px;">
-                  <p style="width: 500px;">This is a Short Description of the case study or the resouce expalining the output of this resources </p>
+                  <img src="./assest/Group 483213.png" >
+                  <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
               </div>
               <button type="button" class="btn btn-outline-dark bg-dark text-center" style="font-style: italic;color: #ffff;">Browse All Resources </button>
