--- a/index.html
+++ b/index.html
@@ -228,13 +228,13 @@
                   development.</p>
               </div>
               <div id="sec62" class="row">
-                <div class="d-flex flex-column col">
+                <div class="col-lg-6">
                   <p id="new">NEW</p>
                   <p>This is a title of the resource or case study</p>
                   <img src="./assest/Group 483213.png" >
                   <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
-                <div class="d-flex flex-column col">
+                <div class="col-lg-6">
                   <p id="new">NEW</p>
                   <p>This is a title of the resource or case study</p>
                   <img src="./assest/Group 483213.png" >
