--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
                   passion and expertise in design and
                   development.</p>
               </div>
-              <div id="sec62" class="row">
-                <div class="col-lg-6">
+              <div id="sec62" class="container">
+                <div class="col-lg-6" id="sec621">
                   <p id="new">NEW</p>
                   <p>This is a title of the resource or case study</p>
                   <img src="./assest/Group 483213.png" >
                   <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6" id="sec621">
                   <p id="new">NEW</p>
                   <p>This is a title of the resource or case study</p>
                   <img src="./assest/Group 483213.png" >
