some margin edit in sec5

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               </div>
               <div id="sec52" class="row mt-30">
                 <div  class="col-lg-6">
-                  <diV style="width: 90%;">
+                  <diV style="max-width: 750px;">
                     <video src="./assest/The Inspiring Background _ Music for Video _ 30 Sec.mp4" controls style="width:100%;min-height:250px;"></video>
                   </diV>
                 </div>
@@ -192,12 +192,12 @@
                 <i class="fa-sharp fa-solid fa-arrow-right" style="color: #a9a9a9;"></i>
               </div>
               <div class="row" id="sec53">
-                <div class="col-lg-6 col-md-4" id="sec531">
+                <div id="sec531">
                   <p>A proven Track Record Of Growth</p>
                   <p>This is a demo content for the header above it will be two lines sentences and it’s going <span>to rock</span></p>
                   <button type="button" class="btn btn-outline-dark text-center">Work With Me <i class="fa-solid fa-arrow-up-right-from-square ml-5"></i></button>
                 </div>
-                <div class="col-lg-6 col-md-4 row" id="sec532">
+                <div class="row" id="sec532">
                   <div class="col-3-sm">
                     <p style="margin: 0;padding: 0;">15+</p>
                     <p style="margin: 0;padding: 0;">years in industry</p>
