add style text size to sec2

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                     WordPress, Shopify. And Webflow</p>
                 </div>
                 <div id="sec22">
-                  <p>1 understand the importance of a Pixel-<br/>
-                    perfect Website, pride myself on<br/>
-                    producing high-quality websites, and I'm<br/>
-                    comfortable working solo or as part of a<br/>
+                  <p style="width:57%;">1 understand the importance of a Pixel-
+                    perfect Website, pride myself on
+                    producing high-quality websites, and I'm
+                    comfortable working solo or as part of a
                     team.</p>
                     <img src="./assest/Avatar! 1.png">
                 </div>
