--- a/index.html
+++ b/index.html
@@ -241,8 +241,39 @@
                   <p>This is a Short Description of the case study or the resouce expalining the output of this resources </p>
                 </div>
               </div>
-              <button type="button" class="btn btn-outline-dark bg-dark text-center" style="font-style: italic;color: #ffff;">Browse All Resources </button>
+              <button type="button" class="btn btn-outline-dark bg-dark text-center" style="font-style: italic;color: #ffff; margin: 20px 0 50px 0;">Browse All Resources </button>
             </div>
+            <footer>
+              <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container">
+                    <a class="navbar-brand" href="#home" style="font-size:30px;">Shehab<span id="dot">.</span></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#Newsletter">Newsletter <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#Services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#Courses">Courses</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#Coaching">Coaching</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#Resources">Resources</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#About">About</a>
+                    </li>
+                  </ul>
+                </div>
+             </nav>
+            </footer>
             </div>
           </div> 
       </div>
