--- a/index.html
+++ b/index.html
@@ -244,15 +244,12 @@
               <button type="button" class="btn btn-outline-dark bg-dark text-center" style="font-style: italic;color: #ffff; margin: 20px 0 50px 0;">Browse All Resources </button>
             </div>
             <footer>
-              <nav class="navbar navbar-expand-lg navbar-dark">
+              <nav class="navbar navbar-expand-lg  navbar-dark">
                 <div class="container">
                     <a class="navbar-brand" href="#home" style="font-size:30px;">Shehab<span id="dot">.</span></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                       <a class="nav-link" href="#Newsletter">Newsletter <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
