--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="container">
                     <a class="navbar-brand" href="#home" style="font-size:30px;">Shehab<span id="dot">.</span></a>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                  <ul class="navbar-nav ml-auto">
+                  <ul class="navbar-nav m-auto">
                     <li class="nav-item">
                       <a class="nav-link" href="#Newsletter">Newsletter <span class="sr-only">(current)</span></a>
                     </li>
@@ -270,6 +270,19 @@
                   </ul>
                 </div>
              </nav>
+             <div id="icons">
+              <a ><i class="fa-brands fa-facebook-f"></i> </a>
+              <a ><i class="fa-brands fa-linkedin-in"></i> </a>
+              <a ><i class="fa-brands fa-instagram"></i></a>
+              <a ><i class="fa-brands fa-twitter"></i></a>
+              </div>
+              <div>
+              <ul  class="d-flex flex-row" style="gap: 10px;">
+                <li>Desclaimer</li>
+                <li>Terms of Services</li>
+                <li>Privacy Policy</li>
+              </ul>
+             </div>
             </footer>
             </div>
           </div> 
