footer is finished

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
               <a ><i class="fa-brands fa-instagram"></i></a>
               <a ><i class="fa-brands fa-twitter"></i></a>
               </div>
-              <div>
-              <ul  class="d-flex flex-row" style="gap: 10px;">
+              <div id="list">
+              <ul  class="d-flex flex-row" style="gap: 10px;color:#fff;">
                 <li>Desclaimer</li>
                 <li>Terms of Services</li>
                 <li>Privacy Policy</li>
