--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
               <a ><i class="fa-brands fa-twitter"></i></a>
               </div>
               <div id="list">
-              <ul  class="d-flex flex-row" style="gap: 10px;color:#fff;">
-                <li>Desclaimer</li>
-                <li>Terms of Services</li>
-                <li>Privacy Policy</li>
+              <ul  class="d-flex flex-row" style="color:#fff;">
+                <a><li>Desclaimer</li></a>
+                <a><li>Terms of Services</li></a>
+                <a><li>Privacy Policy</li></a>
               </ul>
              </div>
             </footer>
