--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <i class="fa-sharp fa-solid fa-arrow-left" style="color: #a9a9a9;"></i>
                 <i class="fa-sharp fa-solid fa-arrow-right" style="color: #a9a9a9;"></i>
               </div>
-              <div id="sec53">
+              <div class="row" id="sec53">
                 <div id="sec531">
                   <p>A proven Track Record Of Growth</p>
                   <p>This is a demo content for the header above it will be two lines sentences and it’s going <span>to rock</span></p>
